--- a/index.html
+++ b/index.html
@@ -6,47 +6,14 @@
     <title>Javascript Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
 </head>
 <body>
-  <!-- <form name="calculator">
-      <table>
-          <tr>
-              <td><input type="text" name="dispay" disabled></td>
-              <td><input type="button" name="clear" value="c" onclick="calculator.display.value = ''"></td>
-          </tr>
-          <tr>
-              <td><input type="button" name="seven" value="7" onclick="calculator.display.value += '7'"></td>
-              <td><input type="button" name="eight" value="8" onclick="calculator.display.value += '8'"></td>
-              <td><input type="button" name="nine" value="9" onclick="calculator.display.value += '9'"></td>
-              <td><input type="button" name="divide" value="/" onclick="calculator.display.value += '/'"></td>
-          </tr>
-          <tr>
-            <td><input type="button" name="four" value="4" onclick="calculator.display.value += '4'"></td>
-            <td><input type="button" name="five" value="5" onclick="calculator.display.value += '5'"></td>
-            <td><input type="button" name="six" value="6" onclick="calculator.display.value += '6'"></td>
-            <td><input type="button" name="times" value="*" onclick="calculator.display.value += '*'"></td>
-        </tr>
-        <tr>
-            <td><input type="button" name="one" value="1" onclick="calculator.display.value += '1'"></td>
-            <td><input type="button" name="two" value="2" onclick="calculator.display.value += '2'"></td>
-            <td><input type="button" name="three" value="3" onclick="calculator.display.value += '3'"></td>
-            <td><input type="button" name="minus" value="-" onclick="calculator.display.value += '-'"></td>
-        </tr>
-        <tr>
-            <td><input type="button" name="zero" value="0" onclick="calculator.display.value += '0'"></td>
-            <td><input type="button" name="decimal" value="." onclick="calculator.display.value += '.'"></td>
-            <td><input type="button" name="doit" value="=" onclick="calculator.display.value = eval(calculator.display.value)"></td>
-            <td><input type="button" name="plus" value="+" onclick="calculator.display.value += '+'"></td>
-        </tr>
-      </table>
-  </form> -->
-
   <div class="container">
     <div class="clear">c</div>
     <div class="display"></div>
-    <div class="num-1">7</div>
-    <div class="num-2">8</div>
+    <div class="num-7">7</div>
+    <div class="num-8">8</div>
     <div class="num-9">9</div>
     <div class="divide">/</div>
     <div class="num-4">4</div>
