--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
   <div class="container">
     <div class="clear">c</div>
     <div class="display"></div>
-    <div class="num-7">7</div>
-    <div class="num-8">8</div>
+    <div id="num-button" class="num-7">7</div>
+    <div id="num-button" class="num-8">8</div>
     <div class="num-9">9</div>
-    <div class="divide">/</div>
+    <div id="divide" class="divide">/</div>
     <div class="num-4">4</div>
     <div class="num-5">5</div>
     <div class="num-6">6</div>
-    <div class"multiply">*</div>
+    <div id="times" class"multiply">*</div>
     <div class="num-1">1</div>
     <div class="num-2">2</div>
     <div class="num-3">3</div>
-    <div class="minus">-</div>
+    <div id="subtract" class="minus">-</div>
     <div class="num-0">0</div>
-    <div class="dec">.</div>
-    <div class="equals">=</div>
-    <div class="plus">+</div>
+    <div id="dec" class="decimal">.</div>
+    <div id="total" class="equals">=</div>
+    <div id="add" class="plus">+</div>
   </div>
 </body>
 </html>
