Calculator functional. Modified css.

--- a/index.html
+++ b/index.html
@@ -6,28 +6,29 @@
     <title>Javascript Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script src="main.js" defer></script>
 </head>
 <body>
   <div class="container">
-    <div class="clear">c</div>
-    <div class="display"></div>
+    <div id="clear" class="clear">C</div>
+    <div id="display" class="display"></div>
     <div id="num-button" class="num-7">7</div>
     <div id="num-button" class="num-8">8</div>
-    <div class="num-9">9</div>
-    <div id="divide" class="divide">/</div>
-    <div class="num-4">4</div>
-    <div class="num-5">5</div>
-    <div class="num-6">6</div>
-    <div id="times" class"multiply">*</div>
-    <div class="num-1">1</div>
-    <div class="num-2">2</div>
-    <div class="num-3">3</div>
-    <div id="subtract" class="minus">-</div>
-    <div class="num-0">0</div>
-    <div id="dec" class="decimal">.</div>
-    <div id="total" class="equals">=</div>
-    <div id="add" class="plus">+</div>
+    <div id="num-button" class="num-9">9</div>
+    <div id="divide">/</div>
+    <div id="num-button" class="num-4">4</div>
+    <div id="num-button" class="num-5">5</div>
+    <div id="num-button" class="num-6">6</div>
+    <div id="multiply">*</div>
+    <div id="num-button" class="num-1">1</div>
+    <div id="num-button" class="num-2">2</div>
+    <div id="num-button" class="num-3">3</div>
+    <div id="minus">-</div>
+    <div id="num-button"class="num-0">0</div>
+    <div id="decimal">.</div>
+    <div id="equals">=</div>
+    <div id="plus">+</div>
   </div>
 </body>
 </html>
